--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,16 @@ body {
     font-family: Arial, sans-serif;
     background-color: var(--cor-white);
     color: var(--bg-color);
+    
   }
   
+
+  .container {
+    display: flex;
+    flex-direction: column;
+    min-height: 100vh; 
+  }
+
   /* Definição do tema escuro */
   body.dark {
     background-color: var(--bg-color);
@@ -38,6 +46,8 @@ body {
     -moz-border-radius: 5px;
     -ms-border-radius: 5px;
     -o-border-radius: 5px;
+    
+    flex-grow: 9;
 }
   
   /* Definição de alinhamento para os títulos */
@@ -188,5 +198,23 @@ body {
     border: none;
     border-radius: 4px;
     cursor: pointer;
+  }
+  
+  /* Rodapé */
+
+  footer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: sticky;
+    top: 100%;
+    font-size: 16px;
+    color: #999;
+    margin-top: 60%;
+  }
+  
+  footer .symbol {
+    font-size: 16px;
+    color: #333;
   }
   
