--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,8 @@ body {
   /* Definição de alinhamento para os títulos */
   h1, h2 {
     text-align: center;
+    font-family: 'Rajdhani', sans-serif;
+    padding: 10px;
   }
   
   /* Definição do estilo do formulário */
@@ -217,4 +219,4 @@ body {
     font-size: 16px;
     color: #333;
   }
-  
+   
