Atualização do estilo dos botões de edição
Esta atualização resolve o bug dos botões "salvar" e "cancelar" na edição de uma task no modo light, que estavam sumindo por conta de não terem o background azul e as configurações padrão do botão.

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ body {
   }
   
 /* Definição do estilo do botão de edição e exclusão */
-  li .excluir,.editar {
+  li .excluir, .editar, li .salvar-tarefa, li .cancelar-edicao {
     background-color: var(--cor-primaria);
     color: var(--cor-white);
     border: none;
